--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,11 +14,8 @@ jobs:
       - image: cimg/python:3.8
     steps:
       - checkout
-    #   - python/install-packages:
-    #       pkg-manager: pip
-      - run:
-          name: Setup
-          command: make setup
+      - python/install-packages:
+          pkg-manager: pip
       - run:
           name: Install
           command: make install
