--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,9 +16,9 @@ jobs:
       - checkout
       - python/install-packages:
           pkg-manager: pip
-      - run:
-          name: Install
-          command: make install
-      - run:
-          name: Lint
-          command: make line
+    #   - run:
+    #       name: Install
+    #       command: make install
+    #   - run:
+    #       name: Lint
+    #       command: make line
