--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,6 @@ jobs:
       - run:
           name: Install
           command: make install
-    #   - run:
-    #       name: Lint
-    #       command: make line
+      - run:
+          name: Lint
+          command: make line
